fix contrast issue with DONE text

--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -42,8 +42,9 @@ body {
 
 /* For red 'DONE |' text in completed rides */
 .done-text {
-    color: red;
+    color: #FFA7A7;
     font-weight: bold;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.9);
 }
 
 /* placeholder text decoration */
